0.02
    - Add facility to pass arguments to storage/engine/tokenizer from
      the command line or via Hailo->new()
    - Fix spelling error in Hailo's POD
    - --reply on the command line didn't work

0.01 Fri Jan 29 00:39:54 GMT 2010
    - First CPAN release